--- a/project-nextjs/package.json
+++ b/project-nextjs/package.json
@@ -11,11 +11,13 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "next": "9.3.5",
+    "next-compose-plugins": "^2.2.0",
     "node-sass": "^4.14.1",
     "postcss-import": "^12.0.1",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
-    "sass": "^1.26.7"
+    "sass": "^1.26.8",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.8.0",
